--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ a {
 
 @font-face {
   font-family: "NunitoSans";
-  src: url("../../assets/font/NunitoSans-Regular.woff") format("woff");
+  src: url("../../assets/Font/Alternative files/NunitoSans-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: bold;
 }
@@ -25,26 +25,85 @@ a {
   background-color: #323232;
   width: 100%;
 }
-.header__nav--logo {
+@media screen and (min-width: 768px) {
+  .header__nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header__nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.header__nav--container {
   padding: 24px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  .header__nav--container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: 0;
+  }
+}
+.header__nav--logo {
+  padding: 0;
+}
+@media screen and (min-width: 768px) {
+  .header__nav--logo {
+    padding-left: 16px;
+  }
 }
 .header__menu {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   color: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .header__menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-left: -50%;
+  }
 }
 .header__menu--link {
   padding-bottom: 16px;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
 }
-
+@media screen and (min-width: 768px) {
+  .header__menu--link {
+    padding-bottom: 3px;
+    font-family: Nunito Sans;
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 600;
+  }
+}
 .banner {
   background-image: url(../assets/Images/hero-bio.jpg);
   background-position: center;
@@ -58,7 +117,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   background-color: rgba(50, 50, 50, 0.5);
   width: 100%;
   height: 250px;
@@ -73,10 +132,16 @@ a {
   padding-left: 22px;
   padding-top: 90px;
 }
-
 .hero {
   padding-left: 16px;
   padding-right: 16px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
 }
 .hero__title {
   font-family: Nunito Sans;
@@ -85,64 +150,200 @@ a {
   font-weight: 700;
   padding-top: 24px;
   padding-bottom: 16px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-family: Nunito Sans;
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
+    padding-top: 48px;
+    padding-bottom: 24px;
+  }
+}
+.hero__image {
+  height: 100px;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media screen and (min-width: 768px) {
+  .hero__image {
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__image {
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
 }
 .hero__subtitle {
   padding-top: 24px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero__subtitle {
+    padding-top: 48px;
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__subtitle {
+    max-width: 1000px;
+  }
 }
 .hero__subtitle2 {
   padding-top: 24px;
   padding-bottom: 16px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero__subtitle2 {
+    padding-top: 48px;
+    padding-bottom: 24px;
+  }
+}
+.hero__subtitle3 {
+  padding-top: 24px;
+  padding-bottom: 16px;
+  width: 100%;
+}
+@font-face {
+  font-family: NunitoSans;
+  src: url(../assets/Font/Alternative\ files/NunitoSans-Bold.woff2) format("woff2");
+  font-family: Nunito Sans;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: 700;
+}
+@media screen and (min-width: 768px) {
+  .hero__subtitle3 {
+    padding-top: 48px;
+    padding-right: 36px;
+    padding-left: 36px;
+  }
 }
 .hero__content {
-  padding-top: 24px;
+  padding-top: 12px;
 }
-.hero__content--title {
-  padding-bottom: 16px;
-  padding-top: 24px;
+@media screen and (min-width: 768px) {
+  .hero__content {
+    padding-top: 48px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 10px;
+  }
 }
 .hero__content--text {
   padding-bottom: 16px;
   padding-top: 24px;
+  width: 100%;
 }
 .hero__content--text2 {
   padding-top: 24px;
   padding-bottom: 16px;
-}
-
-.content {
-  padding-left: 16px;
-  padding-right: 16px;
-  background-color: #FAFAFA;
-  height: auto;
   width: 100%;
 }
-.content__title {
+.hero .content {
+  background-color: #FAFAFA;
+  width: 100%;
+}
+.hero .content__title {
   font-family: Nunito Sans;
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
   padding-top: 24px;
   padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
-.content__item {
-  height: px;
-  width: 100%;
-}
-
-.content__image {
+.hero .content__image {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-}
-.content__image--item {
-  height: 350px;
   width: 100%;
   padding-bottom: 16px;
+  padding-top: 16px;
+}
+.hero .content__image--item {
+  width: 100%;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.hero .footer {
+  background-color: #323232;
+  color: #FFFFFF;
+  width: 100%;
+  height: auto;
+  padding-top: 24px;
+}
+.hero .footer__title {
+  font-family: Nunito Sans;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  padding-top: 24px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+}
+.hero .footer__icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+  width: 30%;
+  padding-bottom: 16px;
+}
+.hero .footer__icon--item {
+  margin-left: -164px;
+  height: 25px;
+}
+.hero .footer__subtitle {
+  font-family: Nunito Sans;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+  padding-top: 24px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+}
+.hero .footer__text {
+  font-family: Nunito Sans;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  padding-bottom: 16px;
+  padding-left: 16px;
+}
+.hero .footer__text--attached {
+  font-family: Nunito Sans;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  padding-left: 16px;
+}
+.hero .footer__logo {
+  padding-top: 24px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+}
+.hero .footer__logo--text {
+  font-family: Nunito Sans;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  padding-bottom: 16px;
+  padding-left: 16px;
 }/*# sourceMappingURL=main.css.map */
