--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,7 @@
 @use "./partials/variables" as *;
 @use "./partials/globals" as *;
 @use "./partials/mixins" as *;
-@use "./partials/typography";
+@use "./partials/typography" as *;
 @use "./partials/header";
 
 .header{
@@ -9,20 +9,55 @@
   &__nav{
     background-color:$primary-color1;
     width:100%;
+    @include tablet{
+      @include flex(row,space-between,center,wrap);
+    }
+    @include desktop{
+      @include flex(row,space-between,center,wrap);
+    }
     // @include tablet{
     //   background-color: ;
     // }
   
-    &--logo{
+    &--container{
       padding:24px;
-      @include flex(row,center,center,nowrap)
+      @include flex(row,center,center,wrap);
+
+      @include tablet{
+        @include flex(row,flex-start,center,wrap);
+        margin-left:0;
+      }
+      @include desktop{
+      }
+    }
+    &--logo{
+      padding:0;
+      @include tablet{
+        padding-left:16px;
+      }
+      @include desktop{
+      }
     }
   }
   &__menu{
-    @include flex(row,center,center,nowrap);
+    @include flex(row,center,center,wrap);
     color:$primary-color3;
+    @include tablet{
+      @include flex(row,space-around,center,wrap);
+      gap:40px;
+      margin-left:-50%;
+    }
+    @include desktop{
+    }
     &--link{
       padding-bottom: 16px;
+      @include font-style(14px,22px,600);
+      @include tablet{
+        padding-bottom:3px;
+        @include font-style(16px,22px,600);
+      }
+      @include desktop{
+      }
     }
   }
 }
@@ -31,11 +66,19 @@
 @include background-style;
 @include size(250px,100%);
 color:$primary-color3;
+@include tablet{
+}
+@include desktop{
+}
 &__image{
-  @include flex(column,center,center,nowrap);
+  @include flex(column,center,center,wrap);
   background-color: rgba(50, 50, 50,0.5);
   width:100%;
   height:250px;
+  @include tablet{
+  }
+  @include desktop{
+  }
    &--title{
    margin-left:0;
    opacity: 1;
@@ -45,7 +88,10 @@ color:$primary-color3;
    width:100%;
    padding-left:22px;
    padding-top:90px;
-
+   @include tablet{
+   }
+   @include desktop{
+   }
   }
 }
 }
@@ -57,56 +103,184 @@ color:$primary-color3;
 .hero{
   padding-left:16px;
   padding-right:16px;
+  width:100%;
+  @include tablet{
+    padding-left:36px;
+    padding-right:36px;
+  }
+  @include desktop{
+  }
   &__title{
     @include font-style(24px,32px,700);
     padding-top:24px;
     padding-bottom:16px;
+    width:100%;
+    @include tablet{
+      @include font-style(36px,44px,700);
+      padding-top:48px;
+      padding-bottom:24px;
+    }
+    @include desktop{
+    }
+  }
+  //here is the problem, I can not find the image
+  &__image{
+    height:100px;
+    width:100%;
+    object-fit: cover;
+
+    
   }
   &__subtitle{
     padding-top:24px;
+    width:100%;
+    @include tablet{
+      padding-top:48px;
+      padding-bottom:24px;
+    }
+    @include desktop{
+      max-width: 1000px;
+    }
     }
   &__subtitle2{
     padding-top:24px;
     padding-bottom:16px;
+    width:100%;
+    @include tablet{
+      padding-top:48px;
+      padding-bottom:24px;
+    }
+    @include desktop{
+    }
+  }
+  &__subtitle3{
+    padding-top:24px;
+    padding-bottom:16px;
+    width:100%;
+    @font-face {
+      font-family: NunitoSans;
+      src: url(../assets/Font/Alternative\ files/NunitoSans-Bold.woff2) format("woff2");
+    @include font-style(14px,32px,700);
+    }
+    @include tablet{
+      padding-top:48px;
+      padding-right: 36px;
+      padding-left: 36px;
+    }
+    @include desktop{
+    }
   }
   &__content{
-    padding-top: 24px;
-    &--title{
-      padding-bottom:16px;
-      padding-top:24px;
+    padding-top: 12px;
+    @include tablet{
+      padding-top:48px;
+      @include flex(row,space-between,center,nowrap);
+      gap:10px;
+    }
+    @include desktop{
     }
     &--text{
       padding-bottom:16px;
       padding-top:24px;
+      width:100%;
     }
     &--text2{
       padding-top:24px;
       padding-bottom:16px;
+      width:100%;
     }
   }
-}
+// }
+// .hero__image{
+  // height:100px;
+  // width:100%;
+  // padding-top:24px;
+  // padding-bottom:16px;
 
+  // @include tablet{
+    // height:250px;
+    // width:100%;
+    // max-width: 1000px;
+    // padding-left:36px;
+    // padding-right:36px;
+    // padding-top:48px;
+    // padding-bottom:24px;
+  // }
+  // @include desktop{
+    // max-width:1000px;
+  // }
+// }
 // gallary,width:25%, height is the same.
 .content{
-  padding-left:16px;
-  padding-right:16px;
   background-color: $secondary-color3;
-  @include size(auto,100%);
+  width:100%;
   &__title{
     @include font-style(24px,32px,700);
-    @include flex(column,center,center,nowrap);
     padding-top:24px;
     padding-bottom:16px;
-    
+    padding-left:16px;
+    padding-right:16px;
   }
-  &__item{
-    @include size(px,100%)
+  &__image{
+    @include flex(column,center,center,wrap);
+    width:100%;
+    padding-bottom:16px;
+    padding-top:16px;
+    &--item{
+      width:100%;
+      padding-bottom:16px;
+      padding-left:16px;
+      padding-right:16px;
+    }
+
   }
 }
-.content__image{
-  @include flex(column,center,center,wrap);
-  &--item{
-  @include size(350px, 100%);
+//footer
+.footer{
+  background-color: $primary-color1;
+ color:$primary-color3;
+ width:100%;
+height:auto;
+padding-top:24px;
+&__title{
+  @include font-style(24px,32px,700);
+  padding-top:24px;
   padding-bottom:16px;
+  padding-left:16px; 
+}
+&__icon{
+  @include flex(row,flex-start,center,wrap);
+  gap:5px;
+  width:30%;
+  padding-bottom:16px;
+  &--item{
+    margin-left:-164px;
+    height:25px
+  }
+}
+&__subtitle{
+  @include font-style(14px,22px,600);
+  padding-top:24px;
+  padding-bottom:16px;
+  padding-left:16px;
+}
+&__text{
+  @include font-style(14px,22px,400);
+  padding-bottom:16px;
+  padding-left:16px;
+  &--attached{
+    @include font-style(14px,22px,400);
+    padding-left:16px;
+  }
+}
+&__logo{
+  padding-top:24px;
+  padding-bottom:16px;
+  padding-left:16px;
+&--text{
+  @include font-style(14px,22px,400);
+  padding-bottom:16px;
+  padding-left:16px;
+  }
 }
 }
