--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -7,7 +7,7 @@
 }
 
 @mixin desktop{
-  @media screen and (min-width:$desktop-breakpint){
+  @media screen and (min-width:$desktop-breakpoint){
     @content;
   }
 }
