--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,6 +1,6 @@
 @font-face{
   font-family:"NunitoSans";
-  src:url("../../assets/font/NunitoSans-Regular.woff") format("woff");
+  src:url("../../assets/Font/Alternative\ files/NunitoSans-Bold.woff2") format("woff2");
   font-weight:700;
   font-style: bold;
 }
