--- a/styles/main.scss
+++ b/styles/main.scss
@@ -80,13 +80,13 @@ color:$primary-color3;
   @include desktop{
   }
    &--title{
-   margin-left:0;
+   margin:0;
    opacity: 1;
    color:white;
    fill:white;
-   height:250px;
-   width:100%;
-   padding-left:22px;
+   height:148px;
+   width:90%;
+   padding-left:16px;
    padding-top:90px;
    @include tablet{
    }
@@ -101,8 +101,6 @@ color:$primary-color3;
 // add border to Biography
 
 .hero{
-  padding-left:16px;
-  padding-right:16px;
   width:100%;
   @include tablet{
     padding-left:36px;
@@ -112,9 +110,8 @@ color:$primary-color3;
   }
   &__title{
     @include font-style(24px,32px,700);
-    padding-top:24px;
-    padding-bottom:16px;
-    width:100%;
+    padding: 16px;
+    width:90%;
     @include tablet{
       @include font-style(36px,44px,700);
       padding-top:48px;
@@ -125,10 +122,9 @@ color:$primary-color3;
   }
   //here is the problem, I can not find the image
   &__image{
-    height:100px;
-    width:100%;
+    width:90%;
     object-fit: cover;
-
+    padding: 16px;
     
   }
   &__subtitle{
@@ -180,17 +176,15 @@ color:$primary-color3;
     @include desktop{
     }
     &--text{
-      padding-bottom:16px;
-      padding-top:24px;
-      width:100%;
+      padding: 16px;
+      width:90%;
     }
     &--text2{
-      padding-top:24px;
-      padding-bottom:16px;
-      width:100%;
+      padding: 16px;
+      width:90%;
     }
   }
-// }
+}
 // .hero__image{
   // height:100px;
   // width:100%;
@@ -211,6 +205,7 @@ color:$primary-color3;
   // }
 // }
 // gallary,width:25%, height is the same.
+
 .content{
   background-color: $secondary-color3;
   width:100%;
@@ -226,11 +221,21 @@ color:$primary-color3;
     width:100%;
     padding-bottom:16px;
     padding-top:16px;
+    @include tablet{
+      @include flex(row, center, center, wrap);
+      width: 80%;
+    }
+
     &--item{
-      width:100%;
+      @include flex(row, center, center, wrap);
+      width:90%;
       padding-bottom:16px;
       padding-left:16px;
       padding-right:16px;
+
+      @include tablet{
+        width: 25%;
+      }
     }
 
   }
