--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0 auto;
   padding: 0;
+  box-sizing: border-box;
 }
 
 ul {
@@ -17,9 +18,25 @@ a {
   font-weight: 700;
   font-style: bold;
 }
+@font-face {
+  font-family: "NunitoSans";
+  src: url("../../assets/Font/Alternative files/NunitoSans-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: medium;
+}
+@font-face {
+  font-family: "NunitoSans";
+  src: url(../../assets/Font/Alternative\ files/NunitoSans-Regular.woff2) format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
 .header {
-  height: 10%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 .header__nav {
   background-color: #323232;
@@ -32,6 +49,7 @@ a {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    padding: 24px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -41,10 +59,11 @@ a {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    padding: 48px;
   }
 }
 .header__nav--container {
-  padding: 24px;
+  padding: 12px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -76,6 +95,7 @@ a {
   align-items: center;
   flex-wrap: wrap;
   color: #FFFFFF;
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   .header__menu {
@@ -84,33 +104,63 @@ a {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    gap: 40px;
+    gap: 27px;
     margin-left: -50%;
   }
 }
 .header__menu--link {
-  padding-bottom: 16px;
-  font-family: Nunito Sans;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 600;
+  padding-bottom: 10px;
+  font-family: "NunitoSans";
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  font-size: 18px;
 }
 @media screen and (min-width: 768px) {
   .header__menu--link {
+    font-family: "NunitoSans";
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
     padding-bottom: 3px;
-    font-family: Nunito Sans;
-    font-size: 16px;
-    line-height: 22px;
-    font-weight: 600;
+    font-size: 18px;
   }
 }
+@media screen and (min-width: 1280px) {
+  .header__menu--link {
+    font-family: "NunitoSans";
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+    font-size: 18px;
+  }
+}
+
+.link__highlight--container {
+  border-bottom: 3px solid #FFFFFF;
+  margin: 0;
+  width: 50%;
+}
+
 .banner {
   background-image: url(../assets/Images/hero-bio.jpg);
   background-position: center;
   background-size: cover;
-  height: 250px;
+  height: 43vh;
   width: 100%;
   color: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .banner {
+    height: 50vh;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner {
+    height: 60vh;
+    width: 100%;
+  }
 }
 .banner__image {
   display: flex;
@@ -120,7 +170,19 @@ a {
   flex-wrap: wrap;
   background-color: rgba(50, 50, 50, 0.5);
   width: 100%;
-  height: 250px;
+  height: 43vh;
+}
+@media screen and (min-width: 768px) {
+  .banner__image {
+    height: 50vh;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner__image {
+    height: 60vh;
+    width: 100%;
+  }
 }
 .banner__image--title {
   margin: 0;
@@ -130,8 +192,29 @@ a {
   height: 148px;
   width: 90%;
   padding-left: 16px;
-  padding-top: 90px;
+  padding-top: 54px;
+  font-family: "NunitoSans";
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
 }
+@media screen and (min-width: 768px) {
+  .banner__image--title {
+    font-family: "NunitoSans";
+    font-size: 60px;
+    line-height: 68px;
+    font-weight: 700;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner__image--title {
+    font-family: "NunitoSans";
+    font-size: 60px;
+    line-height: 68px;
+    font-weight: 700;
+  }
+}
+
 .hero {
   width: 100%;
 }
@@ -142,37 +225,55 @@ a {
   }
 }
 .hero__title {
-  font-family: Nunito Sans;
+  padding: 16px;
+  width: 90%;
+  font-family: "NunitoSans";
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  padding: 16px;
-  width: 90%;
 }
 @media screen and (min-width: 768px) {
   .hero__title {
-    font-family: Nunito Sans;
+    padding-top: 48px;
+    padding-bottom: 24px;
+    font-family: "NunitoSans";
     font-size: 36px;
     line-height: 44px;
     font-weight: 700;
-    padding-top: 48px;
-    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__title {
+    font-family: "NunitoSans";
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
   }
 }
 .hero__image {
-  width: 90%;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   padding: 16px;
 }
 .hero__subtitle {
-  padding-top: 24px;
+  padding-top: 20px;
   width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-family: "NunitoSans";
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
 }
 @media screen and (min-width: 768px) {
   .hero__subtitle {
-    padding-top: 48px;
+    padding-top: 16px;
     padding-bottom: 24px;
+    font-family: "NunitoSans";
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -181,32 +282,37 @@ a {
   }
 }
 .hero__subtitle2 {
-  padding-top: 24px;
+  padding-top: 16px;
   padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   width: 100%;
+  font-family: "NunitoSans";
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
 }
 @media screen and (min-width: 768px) {
   .hero__subtitle2 {
-    padding-top: 48px;
-    padding-bottom: 24px;
+    padding-top: 6px;
+    padding-bottom: 12px;
   }
 }
 .hero__subtitle3 {
   padding-top: 24px;
   padding-bottom: 16px;
   width: 100%;
-}
-@font-face {
-  font-family: NunitoSans;
-  src: url(../assets/Font/Alternative\ files/NunitoSans-Bold.woff2) format("woff2");
-  font-family: Nunito Sans;
-  font-size: 14px;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-family: "NunitoSans";
+  font-size: 24px;
   line-height: 32px;
   font-weight: 700;
+  font-weight: 300;
 }
 @media screen and (min-width: 768px) {
   .hero__subtitle3 {
-    padding-top: 48px;
+    padding-top: 24px;
     padding-right: 36px;
     padding-left: 36px;
   }
@@ -216,7 +322,7 @@ a {
 }
 @media screen and (min-width: 768px) {
   .hero__content {
-    padding-top: 48px;
+    padding-top: 6px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -226,27 +332,50 @@ a {
   }
 }
 .hero__content--text {
-  padding: 16px;
+  padding: 10px;
   width: 90%;
+  font-family: "NunitoSans";
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+}
+@media screen and (min-width: 768px) {
+  .hero__content--text {
+    font-family: "NunitoSans";
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+  }
 }
 .hero__content--text2 {
   padding: 16px;
   width: 90%;
+  font-family: "NunitoSans";
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
 }
-
+@media screen and (min-width: 768px) {
+  .hero__content--text2 {
+    font-family: "NunitoSans";
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+  }
+}
 .content {
   background-color: #FAFAFA;
   width: 100%;
 }
 .content__title {
-  font-family: Nunito Sans;
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 700;
   padding-top: 24px;
   padding-bottom: 16px;
   padding-left: 16px;
   padding-right: 16px;
+  font-family: "NunitoSans";
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
 }
 .content__image {
   display: flex;
@@ -293,13 +422,15 @@ a {
   padding-top: 24px;
 }
 .footer__title {
-  font-family: Nunito Sans;
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 700;
   padding-top: 24px;
   padding-bottom: 16px;
   padding-left: 16px;
+  font-family: "NunitoSans";
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  font-weight: 900;
+  font-size: 22px;
 }
 .footer__icon {
   display: flex;
@@ -316,28 +447,28 @@ a {
   height: 25px;
 }
 .footer__subtitle {
-  font-family: Nunito Sans;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 600;
   padding-top: 24px;
   padding-bottom: 16px;
   padding-left: 16px;
+  font-family: "NunitoSans";
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
 }
 .footer__text {
-  font-family: Nunito Sans;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 400;
   padding-bottom: 16px;
   padding-left: 16px;
+  font-family: "NunitoSans";
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
 }
 .footer__text--attached {
-  font-family: Nunito Sans;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 400;
   padding-left: 16px;
+  font-family: "NunitoSans";
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
 }
 .footer__logo {
   padding-top: 24px;
@@ -345,10 +476,10 @@ a {
   padding-left: 16px;
 }
 .footer__logo--text {
-  font-family: Nunito Sans;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 400;
   padding-bottom: 16px;
   padding-left: 16px;
+  font-family: "NunitoSans";
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
 }/*# sourceMappingURL=main.css.map */
