--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,22 +5,21 @@
 @use "./partials/header";
 
 .header{
-  @include size(10%,100%);
+  width:100%;
+  @include flex(row,center,center,nowrap);
   &__nav{
     background-color:$primary-color1;
     width:100%;
     @include tablet{
       @include flex(row,space-between,center,wrap);
+      padding:24px;
     }
     @include desktop{
       @include flex(row,space-between,center,wrap);
+      padding:48px;
     }
-    // @include tablet{
-    //   background-color: ;
-    // }
-  
     &--container{
-      padding:24px;
+      padding:12px;
       @include flex(row,center,center,wrap);
 
       @include tablet{
@@ -42,42 +41,60 @@
   &__menu{
     @include flex(row,center,center,wrap);
     color:$primary-color3;
+    text-align: center;
     @include tablet{
       @include flex(row,space-around,center,wrap);
-      gap:40px;
+      gap:27px;
       margin-left:-50%;
     }
     @include desktop{
     }
     &--link{
-      padding-bottom: 16px;
-      @include font-style(14px,22px,600);
+      padding-bottom: 10px;
+      @include mobile-pageheader;
+      font-size:18px;
       @include tablet{
+        @include desktop-subheader;
         padding-bottom:3px;
-        @include font-style(16px,22px,600);
+        font-size:18px;
+
       }
       @include desktop{
+        @include desktop-subheader;
+        font-size:18px;
       }
     }
   }
 }
+.link__highlight--container{
+  border-bottom:3px solid $primary-color3;
+  margin:0;
+  width:50%;
+}
+
+
+
 .banner{
   background-image: url(../assets/Images/hero-bio.jpg);
 @include background-style;
-@include size(250px,100%);
+@include size(43vh,100%);
 color:$primary-color3;
 @include tablet{
+@include size(50vh,100%);
 }
 @include desktop{
+@include size(60vh,100%);
 }
 &__image{
   @include flex(column,center,center,wrap);
   background-color: rgba(50, 50, 50,0.5);
   width:100%;
-  height:250px;
+  height:43vh;
   @include tablet{
+  @include size(50vh,100%)
   }
   @include desktop{
+    @include size(60vh,100%)
   }
    &--title{
    margin:0;
@@ -87,10 +104,13 @@ color:$primary-color3;
    height:148px;
    width:90%;
    padding-left:16px;
-   padding-top:90px;
+   padding-top:54px;
+   @include mobile-pageheader;
    @include tablet{
+    @include desktop-pageheader;
    }
    @include desktop{
+    @include desktop-pageheader;
    }
   }
 }
@@ -109,42 +129,49 @@ color:$primary-color3;
   @include desktop{
   }
   &__title{
-    @include font-style(24px,32px,700);
     padding: 16px;
     width:90%;
+    @include mobile-pageheader;
     @include tablet{
-      @include font-style(36px,44px,700);
       padding-top:48px;
       padding-bottom:24px;
+      @include desktop-sectionheader;
     }
     @include desktop{
+      @include desktop-sectionheader;
     }
   }
-  //here is the problem, I can not find the image
   &__image{
-    width:90%;
+    width:100%;
     object-fit: cover;
     padding: 16px;
     
   }
   &__subtitle{
-    padding-top:24px;
+    padding-top:20px;
     width:100%;
+    padding-left:16px;
+    padding-right:16px;
+    @include mobile-pageheader;
     @include tablet{
-      padding-top:48px;
+      padding-top:16px;
       padding-bottom:24px;
+      @include desktop-subheader;
     }
     @include desktop{
       max-width: 1000px;
     }
     }
   &__subtitle2{
-    padding-top:24px;
+    padding-top:16px;
     padding-bottom:16px;
+    padding-left:16px;
+    padding-right:16px;
     width:100%;
+    @include mobile-subheader;
     @include tablet{
-      padding-top:48px;
-      padding-bottom:24px;
+      padding-top:6px;
+      padding-bottom:12px;
     }
     @include desktop{
     }
@@ -153,13 +180,12 @@ color:$primary-color3;
     padding-top:24px;
     padding-bottom:16px;
     width:100%;
-    @font-face {
-      font-family: NunitoSans;
-      src: url(../assets/Font/Alternative\ files/NunitoSans-Bold.woff2) format("woff2");
-    @include font-style(14px,32px,700);
-    }
+    padding-left:16px;
+    padding-right:16px;
+    @include mobile-sectionheader;
+    font-weight:300;
     @include tablet{
-      padding-top:48px;
+      padding-top:24px;
       padding-right: 36px;
       padding-left: 36px;
     }
@@ -169,52 +195,46 @@ color:$primary-color3;
   &__content{
     padding-top: 12px;
     @include tablet{
-      padding-top:48px;
+      padding-top:6px;
       @include flex(row,space-between,center,nowrap);
       gap:10px;
     }
     @include desktop{
     }
     &--text{
-      padding: 16px;
+      padding: 10px;
       width:90%;
+      @include mobile-bodycopy;
+      @include tablet{
+        @include desktop-bodycopy;
+        @include desktop{
+        }
+      }
     }
     &--text2{
       padding: 16px;
       width:90%;
+      @include mobile-bodycopy;
+      @include tablet{
+        @include desktop-bodycopy;
+        @include desktop{
+        }
+      }
     }
   }
 }
-// .hero__image{
-  // height:100px;
-  // width:100%;
-  // padding-top:24px;
-  // padding-bottom:16px;
 
-  // @include tablet{
-    // height:250px;
-    // width:100%;
-    // max-width: 1000px;
-    // padding-left:36px;
-    // padding-right:36px;
-    // padding-top:48px;
-    // padding-bottom:24px;
-  // }
-  // @include desktop{
-    // max-width:1000px;
-  // }
-// }
 // gallary,width:25%, height is the same.
 
 .content{
   background-color: $secondary-color3;
   width:100%;
   &__title{
-    @include font-style(24px,32px,700);
     padding-top:24px;
     padding-bottom:16px;
     padding-left:16px;
     padding-right:16px;
+    @include mobile-pageheader;
   }
   &__image{
     @include flex(column,center,center,wrap);
@@ -248,10 +268,12 @@ color:$primary-color3;
 height:auto;
 padding-top:24px;
 &__title{
-  @include font-style(24px,32px,700);
   padding-top:24px;
   padding-bottom:16px;
   padding-left:16px; 
+  @include mobile-pageheader;
+  font-weight:900;
+  font-size:22px;
 }
 &__icon{
   @include flex(row,flex-start,center,wrap);
@@ -264,18 +286,18 @@ padding-top:24px;
   }
 }
 &__subtitle{
-  @include font-style(14px,22px,600);
   padding-top:24px;
   padding-bottom:16px;
   padding-left:16px;
+  @include mobile-subheader;
 }
 &__text{
-  @include font-style(14px,22px,400);
   padding-bottom:16px;
   padding-left:16px;
+  @include mobile-bodycopy;
   &--attached{
-    @include font-style(14px,22px,400);
     padding-left:16px;
+    @include mobile-bodycopy;
   }
 }
 &__logo{
@@ -283,9 +305,9 @@ padding-top:24px;
   padding-bottom:16px;
   padding-left:16px;
 &--text{
-  @include font-style(14px,22px,400);
   padding-bottom:16px;
   padding-left:16px;
+  @include mobile-bodycopy;
   }
 }
 }
