--- a/styles/main.css
+++ b/styles/main.css
@@ -377,6 +377,24 @@ a {
   line-height: 32px;
   font-weight: 700;
 }
+@media screen and (min-width: 768px) {
+  .content__title {
+    font-family: "NunitoSans";
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+    padding-left: 48px;
+    padding-top: 48px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .content__title {
+    font-family: "NunitoSans";
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+  }
+}
 .content__image {
   display: flex;
   flex-direction: column;
@@ -394,7 +412,7 @@ a {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 80%;
+    width: 100%;
   }
 }
 .content__image--item {
@@ -410,15 +428,14 @@ a {
 }
 @media screen and (min-width: 768px) {
   .content__image--item {
-    width: 25%;
+    width: 30%;
   }
 }
-
 .footer {
+  position: relative;
   background-color: #323232;
   color: #FFFFFF;
   width: 100%;
-  height: auto;
   padding-top: 24px;
 }
 .footer__title {
@@ -431,49 +448,137 @@ a {
   font-weight: 700;
   font-weight: 900;
   font-size: 22px;
+  position: relative;
+}
+@media screen and (min-width: 768px) {
+  .footer__title {
+    font-family: "NunitoSans";
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
+    display: inline-block;
+    padding-left: 48px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .footer__title {
+    max-width: 1000px;
+    padding-left: 64px;
+  }
 }
 .footer__icon {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 5px;
-  width: 30%;
+  flex-wrap: nowrap;
+  width: 42%;
+  height: 6vh;
+  margin-left: 3%;
   padding-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .footer__icon {
+    height: 7vh;
+    width: 30%;
+    margin-left: 0;
+    display: inline-block;
+    margin-left: 5%;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .footer__icon {
+    max-width: 1000px;
+    height: 6vh;
+  }
 }
 .footer__icon--item {
-  margin-left: -164px;
   height: 25px;
 }
-.footer__subtitle {
-  padding-top: 24px;
-  padding-bottom: 16px;
+.footer__text {
   padding-left: 16px;
+  font-family: "NunitoSans";
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+}
+@media screen and (min-width: 768px) {
+  .footer__text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .footer__text {
+    width: 70%;
+    margin-left: 0;
+  }
+}
+.footer__text--title {
   font-family: "NunitoSans";
   font-size: 14px;
   line-height: 22px;
   font-weight: 600;
-}
-.footer__text {
+  padding-top: 16px;
   padding-bottom: 16px;
-  padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .footer__text--title {
+    font-family: "NunitoSans";
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+    font-weight: 700;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .footer__text--title {
+    font-family: "NunitoSans";
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+    max-width: 1000px;
+  }
+}
+.footer__text--content {
   font-family: "NunitoSans";
   font-size: 13px;
   line-height: 18px;
   font-weight: 400;
 }
-.footer__text--attached {
-  padding-left: 16px;
-  font-family: "NunitoSans";
-  font-size: 13px;
-  line-height: 18px;
-  font-weight: 400;
+@media screen and (min-width: 768px) {
+  .footer__text--content {
+    font-family: "NunitoSans";
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .footer__text--content {
+    max-width: 1000px;
+  }
+}
+.footer__text--content2 {
+  padding-top: 0px;
+  padding-bottom: 16px;
 }
 .footer__logo {
   padding-top: 24px;
   padding-bottom: 16px;
   padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .footer__logo {
+    position: absolute;
+    left: 80%;
+    top: 8%;
+    display: inline-block;
+  }
 }
 .footer__logo--text {
   padding-bottom: 16px;
@@ -482,4 +587,27 @@ a {
   font-size: 13px;
   line-height: 18px;
   font-weight: 400;
+}
+@media screen and (min-width: 768px) {
+  .footer__logo--text {
+    font-family: "NunitoSans";
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    padding-left: 53px;
+    padding-top: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__icon--highlight {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__text--container1 {
+    margin-left: 5%;
+  }
 }/*# sourceMappingURL=main.css.map */
