--- a/styles/main.scss
+++ b/styles/main.scss
@@ -144,6 +144,7 @@ color:$primary-color3;
     padding-right:36px;
   }
   @include desktop{
+    max-width: 1300px;
   }
   &__title{
     padding: 16px;
@@ -162,17 +163,19 @@ color:$primary-color3;
     width:100%;
     object-fit: cover;
     padding: 16px;
+    display: inline-block;
+    margin:auto;
+    @include desktop{
+    }
     
   }
   &__subtitle{
     padding-top:20px;
     width:100%;
-    padding-left:16px;
-    padding-right:16px;
+    margin:2%;
     @include mobile-pageheader;
     @include tablet{
       padding-top:16px;
-      padding-bottom:24px;
       @include desktop-subheader;
     }
     @include desktop{
@@ -244,6 +247,9 @@ color:$primary-color3;
 .content{
   background-color: $secondary-color3;
   width:100%;
+  @include desktop{
+    max-width: 1300px;
+  }
   &__title{
     padding-top:24px;
     padding-bottom:16px;
@@ -291,6 +297,9 @@ color:$primary-color3;
   color:$primary-color3;
   width:100%;
   padding-top:24px;
+  @include desktop{
+    max-width: 1300px;
+  }
 &__title{
   padding-top:24px;
   padding-bottom:16px;
@@ -302,8 +311,7 @@ color:$primary-color3;
     display: inline-block;
     padding-left:48px;
     @include desktop{
-      max-width: 1000px;
-      padding-left:64px;
+      max-width: 800px;
     }
   }
 }
@@ -311,7 +319,6 @@ color:$primary-color3;
   @include flex(row,center,center,nowrap);
   width:42%;
   height:6vh;
-  margin-left:3%;
   @include tablet{
     height:7vh;
     width:30%;
@@ -319,7 +326,7 @@ color:$primary-color3;
     display: inline-block;
     margin-left:5%;
     @include desktop{
-      max-width: 1000px;
+      max-width: 800px;
       height:6vh;
     }
   }
@@ -333,10 +340,11 @@ color:$primary-color3;
   @include tablet{
     @include flex(row,space-between,center,nowrap);
     width:100%;
-    margin-top:-3%;
     @include desktop{
       width:70%;
-      margin-left:0;
+      margin-left:16px;
+      max-width: 800px;
+      padding-left:0;
     }
   }
   &--title{
@@ -348,7 +356,7 @@ color:$primary-color3;
       font-weight:700;
       @include desktop{
         @include desktop-bodycopy;
-        max-width: 1000px;
+        max-width: 800px;
     }
   }
 }
@@ -357,7 +365,7 @@ color:$primary-color3;
   @include tablet{
     @include desktop-bodycopy;
   @include desktop{
-    max-width: 1000px;
+    max-width: 800px;
   }
   }
 }
@@ -381,24 +389,39 @@ color:$primary-color3;
 &--text{
   padding-bottom:16px;
   padding-left:16px;
+  margin:0;
   @include mobile-bodycopy;
   @include tablet{
     @include desktop-footercopy;
-    padding-left:53px;
-    padding-top:48px;
+    padding-top:24px;
+    margin-left:40px;
   }
+  @include desktop{
+    @include desktop-footercopy;
+    margin-left:48px;
+    padding-top:48px;
+    max-width: 800px;
+    padding-left:0;
   }
 }
 }
 
 .footer__icon--highlight{
   @include tablet{
-    margin-left:10%;
+    margin-left:15%;
     margin-right:10%;
   }
 }
 .footer__text--container1{
   @include tablet{
   margin-left:5%;
+}
+}
+}
+.footer__bgcontainer{
+  @include desktop{
+  background-color: $primary-color1;
+  width:100%;
+  padding-top:24px;
 }
 }
